# NGS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/NGS/: ByteArray.h  CMakeLists.txt  File.h  NGS.h  NGS.hpp  NGS.vcxproj  NGS.vcxproj.filters  NGS_Base.h  NGS_Bit.h  NGS_Color.h  NGS_Communication.h  NGS_Concepts.h  NGS_Config.h  NGS_Debug.h  NGS_Defined.h  NGS_Event.h  NGS_Function.h  NGS_Lib.h  NGS_Memory.h  NGS_Movie.h  NGS_Object.h  NGS_STL.h  NGS_Setting.h  NGS_TemplateMate.h  NGS_Time.h  NGS_TypeTrait.h  NGS_Version.h  cpp.hint
include/NGS/Algorithm/: Algorithm.h  PID.h  PID.hpp
include/NGS/Debug/: Debug.h  Stream.h
include/NGS/Embedded/: Embedded.h  Interface.h
include/NGS/Math/: Line.h  Math.h  Matrix.h  Rectangle.h  Vector.h  VectorExperienment.h
include/NGS/_discard/: geometry.h  rotation.h  scalar.h
include/NGS/algorithm/: CMakeLists.txt  algorithm.hpp
include/NGS/allocator/: allocator.h  defined.h  id.h
include/NGS/assert/: assert.h  assert_.h  defined.h  format.h  normal.h
include/NGS/base/: BTL.h  CMakeLists.txt  STL.h  assert.h  base.h  base.hpp  base_class.h  basic.h  bit.h  concepts.h  config.h  console.h  console.hpp  defined.h  format.h  is_as.h  library.h  log.h  memory_reinterpreter.h  space_transform.h  template_mate.h  to_string.h  type_info.h  type_trait.h  utility.h  version.h
include/NGS/bases/: bases.h  defined.h  delete_copy.h  empty.h  forward.h  singleton.h
include/NGS/basic/: STL.h  basic.h  config.h  declval.h  defined.h  enum_name.h  numbers.h  precessor.h  preprocessor.h  type.h  type_name.h  version.h
include/NGS/bit/: bit.h  defined.h  operation.h  set.h
include/NGS/boost/: defined.h  fusion.h  mpl.h
include/NGS/byte/: defined.h  no_endian.h
include/NGS/ccpt/: any.h  base.h  bool.h  ccpt.h  defined.h  derived.h  functor.h  fundamental.h  none.h  predicate.h  verify.h
include/NGS/color/: channel.h  color.h  concept.h  constant.h  defined.h  primary.h
include/NGS/concepts/: any.h  concepts.h  constant.h  defined.h  derived.h  functor.h  fundamental.h  none.h  predicate.h  verify.h
include/NGS/config/: build.h  config.h  defined.h  extern_c.h  feature.h  lib.h  static.h
include/NGS/console/: base.h  console.h  console.hpp  default.h  defined.h  impl.h
include/NGS/coordinate/: axis.h  coordinate.h  defined.h  orthographic.h
include/NGS/cpt/: base.h  cpt.h  defined.h  functional.h  is_specialization_of.h  is_template.h  na.h  naked.h  object.h  operators.h  original.h  specialiaze_form.h
include/NGS/dl/: dl.hpp  enum.h  transform.h  transform.hpp
include/NGS/embedded/: CMakeLists.txt  defined.h  embedded.hpp  io.h
include/NGS/embedded2/: CMakeLists.txt  Interface.h  embedded.h
include/NGS/esp/: ESP.h  ESP.hpp  defined.h  esp.vcxproj.filters  esp_idf.h
include/NGS/experimental/: defined.h  experimental.h  movie.h
include/NGS/extend/: CMakeLists.txt  byte_array.h  color.h  command_queue.h  console.h  console.hpp  debug.h  event.h  extend.h  extend.hpp  factory.h  file.h  function.h  iterator_interface.h  memory.h  memory_reinterpreter.h  meta_variable_wrapper.h  movie.h  parser.h  setting.h  static_string.h  stream.h  timer.h  tree.h  user_data.h
include/NGS/flag/: basic.h  defined.h  enum.h  enum_flag.h  flag.h  index.h
include/NGS/fmt/: c_type.h  defined.h  fmt.h  format.h
include/NGS/functional/: binder.h  defined.h  parameter_packet.h
include/NGS/graphic/: graph.h
include/NGS/gsml/: defined.h
include/NGS/imgui/: imgui.h
include/NGS/layout/: align.h  defined.h  layout.h  offset.h  size.h
include/NGS/lib/: defined.h  lib.h  lib_end.h  module.h  module_end.h
include/NGS/linear_algebra/: concept.h  container.h  defined.h  interface.h  linear_algebra.h
include/NGS/location/: defined.h  location.h  source_location.h
include/NGS/log/: config.h  defined.h  level.h  log.h  logger.h  scope.h
include/NGS/math/: BTL.h  CMakeLists.txt  angle.h  basic.h  box.h  defined.h  geometry.h  math.hpp  matrix.h  matrix_exp.h  matrix_expr.h  mla.h  point.h  rotation.h  space.h  transform.h  util.h  vector.h  vector_exp.h  vector_expr.h  vector_post.h
include/NGS/meta_struct/: defined.h  meta_struct.h
include/NGS/mla/: defined.h  iterator_interface.h  matrix.h  mla.h  scalar.h  vector.h
include/NGS/mpl/: container.h  counter.h  defined.h  functor.h  meta_struct.h  mpl.h  mstruct.h  optional.h  structure.h  template.h  utils.h
include/NGS/nda/: NDA.h  NDA.hpp  config.h  defined.h  depend.h  nda.vcxproj  nda.vcxproj.filters  transform.h
include/NGS/ngl/: NGL.h  NGL.hpp  NGL.vcxproj  bind.h  config.h  context.h  defined.h  environment.h  error.h  framebuffer.h  framebuffer.hpp  gl_enum.h  glfw.h  ngl.vcxproj  ngl.vcxproj.filters
include/NGS/ngl2/: config.h  defined.h  gl_enum.h
include/NGS/nsl/: CMakeLists.txt  LinuxDriver.props  NSL.h  NSL.hpp  NSL.vcxproj  NSL.vcxproj.filters  defined.h  depend.h
include/NGS/nsw/: CMakeLists.txt  NSW.h  NSW.hpp
include/NGS/numbers/: defined.h  normal.h  numbers.h
include/NGS/osapi/: defined.h  esp.h  esp.hpp  windows.h
include/NGS/preprocessor/: defined.h  preprocessor.h  utils.h
include/NGS/prism/: defined.h  description.h  interface.h  pipeline.h  prism.h
include/NGS/static/: defined.h  functional.h  params.h  string.h  tuple.h
include/NGS/static_string/: core.h  defined.h
include/NGS/stl/: defined.h  iterator.h  tuple.h
include/NGS/symbol/: defined.h  enum.h  symbol.h  type.h  value.h
include/NGS/to_string/: core.h  defined.h  format.h  to_string.h
include/NGS/transform/: 3d.h  _3d.h  defined.h  las.h  scale.h  tag.h  transform.h
include/NGS/tvm/: bijective.h  defined.h  injective.h  sequence.h  tv.h  tv_bitmap.h  tvm.h  type_value.h  vt.h
include/NGS/type_trait/: defined.h  function.h  index_type_identiry.h  (+14 more)
src/NGS/: CMakeLists.txt  NGS.cpp
test/: CMakeLists.txt  test.cpp
unit_test/: CMakeLists.txt  algorithm.cpp  bit.cpp  byteArray.cpp  color.cpp  communication.cpp  defined.h  display.cpp  main.cpp  ngs.h  test.cpp  timer.cpp  unit_test.vcxproj  unit_test.vcxproj.filters
unit_test/_ngs/: math.h
(+1728 files in other folders)
